# wt_custom_lang_rev

./: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
dev/: entries.html  index.html
scss/: index.scss
scss/in/: index.scss
src/: entries.js  index.js  replace_header.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/custom_lang/: custom_lang.rs  error.rs  mod.rs
src-tauri/src/dom/: document.rs
src-tauri/src/lang_manipulation/: primitive_lang.rs
src-tauri/src/storage/: backup.rs  entries.rs  mod.rs
src/index/: index.js
