[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[dependencies]
serde_json = "^1.0.2"
serde = { version = "^1.0.137", features = ["derive"] }
tauri = { version = "^1.0.0-rc.2", features = ["api-all"] }

fs_extra = "^1.2.0"
notify-rust = "^4.5.5"
wt_csv = "0.10.0"
levenshtein = "^1.0.5"
reqwest = { version = "^0.11.10" }
duckstore = "^2.1.0"
lazy_static = "^1.4.0"
regex = "^1.5.4"
execute = "^0.2.9"
sysinfo = "^0.22.5"
directories = "^4.0.1"
confy = "^0.4.0"
time = "^0.3.9"
chrono = "^0.4.19"

[dependencies.web-sys]
version = "0.3.36"
features = ["console", "Window", "Document", "Element", "HtmlElement", "Node", "HtmlCollection", "HtmlButtonElement"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
